--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,158 @@
     padding: 0;
     margin: 0;
 }
+
+
+body {
+    font-family: Arial, sans-serif;
+    background-color: #f0f0f0;
+}
+
+/* container generale app  */
+
+.app-container {
+    display: flex;
+    height: 100vh;
+    width: 100%;
+}
+/* sezione Sidebar  */
+.sidebar {
+    width: 30%;
+    background-color: #eaeaea;
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+}
+/* sezione profilo utente ed avatar*/
+.profile {
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+    position: relative;
+}
+
+.avatar {
+    width: 50px;
+    height: 50px;
+    background-color: #ccc;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 24px;
+    margin-right: 10px;
+}
+
+/* gestione icone  */
+    /* icone profilo sidebar */
+.profile-icons {
+    display: flex;
+    gap: 10px;
+    position: absolute;
+    right: 0;
+}
+
+.profile-icons i:hover {
+    color: #333;
+}
+
+/* icone Chat */
+.chat-icons{
+    display: flex;
+    gap: 10px;
+    position: absolute;
+    right: 0;
+    margin-right: 5px;
+}
+
+/* sezione notifiche */
+.notifications {
+    margin-bottom: 20px;
+}
+
+.notifications p {
+    margin-bottom: 5px;
+}
+
+.contact-list {
+    flex-grow: 1;
+    overflow-y: auto;
+}
+
+.contact {
+    padding: 10px;
+    border-bottom: 1px solid #ccc;
+}
+
+.contact:hover {
+    background-color: #ddd;
+}
+
+/* sezione chat inviate e ricevute */
+
+.chat-container {
+    width: 70%;
+    background-color: #fff;
+    display: flex;
+    flex-direction: column;
+}
+
+.chat-header {
+    display: flex;
+    align-items: center;
+    padding: 5px;
+    background-color: #f7f7f7;
+    border-bottom: 1px solid #ccc;
+    position: relative;
+}
+
+.chat-messages {
+    flex-grow: 1;
+    padding: 20px;
+    background-color: #fafafa;
+    overflow-y: auto;
+}
+
+.message {
+    margin-bottom: 20px;
+    max-width: 60%;
+    padding: 10px;
+    border-radius: 10px;
+    position: relative;
+}
+
+.message p {
+    margin-bottom: 5px;
+}
+
+.message span {
+    font-size: 12px;
+    color: #666;
+    position: absolute;
+    bottom: 5px;
+    right: 10px;
+}
+
+.sent {
+    background-color: #dcf8c6;
+    margin-left: auto;
+    text-align: left;
+}
+
+.received {
+    background-color: #fff;
+    border: 1px solid #ccc;
+    text-align: left;
+}
+
+.chat-input {
+    padding: 10px;
+    border-top: 1px solid #ccc;
+}
+
+.chat-input input {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 20px;
+}
