--- a/css/style.css
+++ b/css/style.css
@@ -43,8 +43,8 @@ main{
 }
 
 .avatar {
-    width: 30px;
-    height: 30px;
+    width: 40px;
+    height:40px;
     background-color: #ccc;
     border-radius: 50%;
     display: flex;
@@ -52,6 +52,14 @@ main{
     justify-content: center;
     font-size: 14px;
     margin-right: 10px;
+    object-fit: contain;
+}
+
+.avatar img {
+    max-width: 100%;
+    width: 100px;
+    height: 70%;
+    object-fit: cover;
 }
 
 /* gestione icone  */
@@ -108,6 +116,8 @@ i:hover {
 .top{
     margin-right: 2px;
 }
+
+
 
 
 /* sezione notifiche */
@@ -217,8 +227,9 @@ i:hover {
     flex-grow: 1;
     padding: 20px;
     width: 100%;
-    background-color: #fafafa;
     overflow-y: scroll;
+    background-image: url('../img/desktop-wallpaper-message-background-whatsapp-message-background.jpg');
+    background-size: contain;
 }
 
 .chat-info p{
