--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,11 @@
     font-size: 13px;
 }
 
+header{
+    background-color: #009688;
+    height: 70px;
+   
+}
 
 main{
     background-color: #DBDBD3;
@@ -13,6 +18,8 @@ main{
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: -30px;
+    
 }
 
 
@@ -53,13 +60,14 @@ main{
     font-size: 14px;
     margin-right: 10px;
     object-fit: contain;
+    overflow: hidden
 }
 
 .avatar img {
-    max-width: 100%;
-    width: 100px;
-    height: 70%;
+    height: 100%;
+    border-radius: 15px;
     object-fit: cover;
+   
 }
 
 /* gestione icone  */
@@ -185,6 +193,8 @@ i:hover {
     border-bottom: 1px solid rgba(128, 128, 128, 0.3);
     
 }
+
+
 
 .contact:hover {
     background-color: #ddd;
