--- a/BONUS/css/style.css
+++ b/BONUS/css/style.css
@@ -1,5 +1,3 @@
-
-/*regole stile generali */
 * {
     box-sizing: border-box;
     padding: 0;
@@ -8,7 +6,7 @@
     font-size: 13px;
 }
 
-/* regole sezione'header */
+/* Regole sezione header */
 header {
     position: relative;
     background-color: #009688;
@@ -17,9 +15,8 @@ header {
     z-index: 1;
 }
 
-/* regole sezione main */
+/* Regole sezione main */
 main {
-   
     position: absolute;
     width: 80%;
     max-height: 50%;
@@ -33,15 +30,11 @@ main {
     z-index: 2;
 }
 
-
-/* regole contenitore app */
-#app{
+/* Regole contenitore app */
+#app {
     display: flex;
     width: 100vw;
     height: 100vh;
-
-   
-    
 }
 
 /* Stile della sidebar */
@@ -108,27 +101,26 @@ main {
     color: #B1B1B1;
 }
 
-/* Stile  e regole delle icone del messaggio di input */
+/* Stile e regole delle icone del messaggio di input */
 .icon-input {
     display: flex;
     align-items: center;
     color: #6B7376;
 }
 
-.icon-input.before  .fa-face-smile{
+.icon-input.before .fa-face-smile {
     padding-left: 15px;
     margin-right: 20px;
     font-size: 18px;
 }
 
-.icon-input.after .fa-microphone{
+.icon-input.after .fa-microphone {
     padding-right: 15px;
     margin-left: 20px;
     font-size: 18px;
-
 }
 
-/* sezione regole  notifiche */
+/* Sezione regole notifiche */
 .notifications {
     display: flex;
     background-color: #8EDAFC;
@@ -144,7 +136,7 @@ main {
     background-color: #fff;
 }
 
-/* placeholder */
+/* Placeholder */
 .search-chat {
     display: flex;
     align-items: center;
@@ -170,7 +162,7 @@ main {
     padding: 5px;
 }
 
-/* regole contact list */
+/* Regole contact list */
 .contact-list {
     flex-grow: 1;
     overflow-y: scroll;
@@ -209,7 +201,7 @@ main {
     font-size: 10px;
 }
 
-/* regole container chat */
+/* Regole container chat */
 .chat-container {
     width: 70%;
     height: 90%;
@@ -236,7 +228,7 @@ main {
     color: #aaa;
 }
 
-/* regole messaggi  */
+/* Regole messaggi */
 .chat-messages {
     flex-grow: 1;
     padding: 20px;
@@ -276,6 +268,42 @@ main {
     align-self: flex-end;
 }
 
+/* Stile toggle menu messaggi */
+.message-menu {
+    position: absolute;
+    top: 0;
+    right: 0;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
+    display: none;
+}
+
+.message:hover .message-menu {
+    display: block;
+}
+
+.message-menu ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+.message-menu li {
+    cursor: pointer;
+    padding: 5px 10px;
+}
+
+.message-menu li:hover {
+    background-color: #f2f2f2;
+}
+
+.togglemenu{
+    text-align: right;
+    margin-bottom: 10px;
+}
+
 /* Stile dell'input della chat */
 .chat-input {
     padding: 10px;
@@ -296,5 +324,3 @@ main {
 .contact.active {
     background-color: #ddd;
 }
-
-
