--- a/BONUS/css/style.css
+++ b/BONUS/css/style.css
@@ -246,7 +246,9 @@ main {
 }
 
 .message p {
-    margin-bottom: 5px;
+    margin-top: 10px;
+    padding: 5px;
+  
 }
 
 .message span {
@@ -303,6 +305,8 @@ main {
     text-align: right;
     margin-bottom: 10px;
 }
+
+
 
 /* Stile dell'input della chat */
 .chat-input {
