feat.(add style css dark mode end)

--- a/BONUS/css/style.css
+++ b/BONUS/css/style.css
@@ -340,13 +340,16 @@ main {
 
 /* Dark mode */
 body.dark-mode {
-    background-color: #121212;
+    background-color:#333;
     color: #eaeaea;
 }
 
 
 body.dark-mode .message{
-    color:#121212
+    color:#121212;
+}
+body.dark-mode .chat-messages{
+    background-image: url('../img/darkmode.jpg');
 }
 
 body.dark-mode .chat-header{
@@ -393,4 +396,13 @@ body.dark-mode .contact:hover{
 
 body.dark-mode .contact.active{
     background-color: #009688;
+}
+
+body.dark-mode .input-search input, body.dark-mode .chat-input input {
+    background-color: #333;
+}
+
+body.dark-mode .chat-messages .sent{
+    background-color: #333;
+    color: #fff;
 }
