--- a/BONUS/css/style.css
+++ b/BONUS/css/style.css
@@ -73,7 +73,7 @@ main {
 .avatar {
     width: 40px;
     height: 40px;
-    background-color: #ccc;
+    background-color: #fff;
     border-radius: 50%;
     display: flex;
     align-items: center;
@@ -258,8 +258,6 @@ main {
 
 .message p {
     margin-top: 10px;
-    padding: 5px;
-  
 }
 
 .message span {
@@ -386,7 +384,6 @@ color: #009688;
 }
 
 body.dark-mode .notifications .avatar .fa-solid{
-    background-color: #009688;
     color: black;
 }
 
@@ -400,9 +397,15 @@ body.dark-mode .contact.active{
 
 body.dark-mode .input-search input, body.dark-mode .chat-input input {
     background-color: #333;
+    color: #fff;
 }
 
 body.dark-mode .chat-messages .sent{
     background-color: #333;
     color: #fff;
+}
+
+body.dark-mode .message-menu li{
+    background-color: #333;
+    color: white;
 }
