--- a/BONUS/css/style.css
+++ b/BONUS/css/style.css
@@ -409,3 +409,33 @@ body.dark-mode .message-menu li{
     background-color: #333;
     color: white;
 }
+
+/* splash */
+.splash {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #121212; 
+    color: #eaeaea; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+    transition: opacity 0.5s ease;
+   
+}
+
+.splash h1{
+    color: #009688;
+    font-size: large;
+    font-size: 20px;
+   
+}
+
+
+.splash-hidden {
+    opacity: 0;
+    pointer-events: none;
+}
